added all the buildings